--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "bugs": "https://github.com/HichemTab-tech/project-registry/issues",
   "dependencies": {
+    "@inquirer/prompts": "^8.1.0",
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^5"
+    "@oclif/plugin-plugins": "^5",
+    "execa": "^9.6.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
@@ -48,16 +50,14 @@
     "bin": "projx",
     "dirname": "projx",
     "commands": "./dist/commands",
+    "hooks": {
+      "command_not_found": "./dist/hooks/command_not_found"
+    },
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-plugins"
     ],
-    "topicSeparator": " ",
-    "topics": {
-      "hello": {
-        "description": "Say hello to the world and others"
-      }
-    }
+    "topicSeparator": " "
   },
   "repository": "HichemTab-tech/project-registry",
   "scripts": {
