--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
-    "execa": "^9.6.1"
+    "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
+    "execa": "^9.6.1",
+    "strip-ansi": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
