--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,33 @@
-name: tests
+name: Test
 on:
   push:
-    branches-ignore: [master]
-  workflow_dispatch:
-
+    branches:
+      - master
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+    branches:
+      - master
 jobs:
-  unit-tests:
-    strategy:
-      matrix:
-        os: ['ubuntu-latest', 'windows-latest']
-        node_version: [lts/-1, lts/*, latest]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
+  test:
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: '23.x'
+          registry-url: 'https://registry.npmjs.org'
+
       - name: Install pnpm
         run: npm install -g pnpm
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm run test
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Test project
+        run: pnpm run test
